force-app/main/default/objects/CaseWidget_Config__c/CaseWidget_Config__c.object-meta.xml
<CustomObject>
    <label>Case Widget Config</label>
    <nameField>
        <label>Case Widget Config Name</label>
        <type>AutoNumber</type>
        <displayFormat>CWC-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Case Widget Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>