force-app/main/default/objects/CaseWidget_Config__c/fields/Auto_Close_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Seconds__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Seconds to Auto-Close</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>