force-app/main/default/objects/CaseWidget_Config__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <referenceTo>CaseWidget_Domain__c</referenceTo>
    <relationshipLabel>Configs</relationshipLabel>
    <relationshipName>Configs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>