force-app/main/default/objects/CaseWidget_Config__c/fields/Loading_Message__c.field-meta.xml
<CustomField>
    <fullName>Loading_Message__c</fullName>
    <defaultValue>&quot;Sending your request...&quot;</defaultValue>
    <label>Loading Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>