force-app/main/default/objects/CaseWidget_Config__c/fields/Modal_Description__c.field-meta.xml
<CustomField>
    <fullName>Modal_Description__c</fullName>
    <label>Modal Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>