force-app/main/default/objects/CaseWidget_Config__c/fields/Modal_Title__c.field-meta.xml
<CustomField>
    <fullName>Modal_Title__c</fullName>
    <defaultValue>&quot;Report an issue&quot;</defaultValue>
    <label>Modal Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>