force-app/main/default/objects/CaseWidget_Config__c/fields/Msg_Description_Required__c.field-meta.xml
<CustomField>
    <fullName>Msg_Description_Required__c</fullName>
    <defaultValue>&quot;Description is required&quot;</defaultValue>
    <label>Description Required Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>