force-app/main/default/objects/CaseWidget_Config__c/fields/Msg_Email_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Msg_Email_Invalid__c</fullName>
    <defaultValue>&quot;Enter a valid email&quot;</defaultValue>
    <label>Invalid Email Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>