force-app/main/default/objects/CaseWidget_Config__c/fields/Msg_Subject_Required__c.field-meta.xml
<CustomField>
    <fullName>Msg_Subject_Required__c</fullName>
    <defaultValue>&quot;Subject is required&quot;</defaultValue>
    <label>Subject Required Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>