force-app/main/default/objects/CaseWidget_Config__c/fields/Recaptcha_Min_Score__c.field-meta.xml
<CustomField>
    <fullName>Recaptcha_Min_Score__c</fullName>
    <defaultValue>0.50</defaultValue>
    <label>Minimum reCAPTCHA Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>