force-app/main/default/objects/CaseWidget_Config__c/fields/Recaptcha_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Recaptcha_Secret_Key__c</fullName>
    <label>reCAPTCHA Secret Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>