force-app/main/default/objects/CaseWidget_Config__c/fields/Recaptcha_Site_Key__c.field-meta.xml
<CustomField>
    <fullName>Recaptcha_Site_Key__c</fullName>
    <label>reCAPTCHA Site Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>