force-app/main/default/objects/CaseWidget_Config__c/fields/Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Success_Message__c</fullName>
    <defaultValue>&quot;Thank you for your message.&quot;</defaultValue>
    <label>Success Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>